<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">litedood</string>
    <string name="app_name">轻豆</string>
    <string name="app_settings">设置</string>
    
    <string name="main_message_button_text">消息</string>
    <string name="main_contacts_button_text">联系人</string>
    <string name="main_pandora_button_text">应用盒子</string>

    <string name="main_menu_item_add_user">添加好友/群</string>
    <string name="main_menu_item_add_group">发起群聊</string>

    <string name="drawer_open">打开设置</string>
    <string name="drawer_close">关闭设置</string>

    <string-array name="configItems">
        <item>配置1</item>
        <item>配置2</item>
    </string-array>

    <string name="computer">[电脑]</string>
    <string name="phone">[手机]</string>
    <string name="pad">[平板]</string>
    <string name="html">[网页]</string>
    <string name="audio">[语音]</string>
    <string name="image">[图片]</string>
    <string name="file">[文件]</string>
    <string name="position">[位置]</string>
    <string name="card">[名片]</string>
    <string name="weakHint">[提示]</string>
    <string name="unknowMsg">[未知]</string>
    <string name="sending">[发送中]</string>
    <string name="send_fail">[发送失败]</string>
    <string name="draft">[草稿]</string>

    <string name="login_name_hint">手机号/豆豆号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_button_text">登录</string>
    <string name="logout_button_text">退出登录</string>
    <string name="login_text_forgot_password">忘记密码？</string>
    <string name="login_text_register">注册</string>

    <string name="login_usercode_empty_message">请输入正确的手机号/豆豆号</string>
    <string name="login_password_empty_message">请输入正确的密码</string>

    <string name="register_title">注册轻豆</string>

    <string name="forgot_password_title">找回密码</string>
    <string name="forgot_password_step_button_text">下一步</string>
    <string name="action_finished_text">完成</string>
    <string name="forgot_password_authcode_hint">输入获取到的验证码</string>
    <string name="forgot_password_getauthcode">获取验证码</string>
    <string name="forgot_password_new_password">新密码</string>

    <string name="busy_indicator_hint">加载中</string>

    <string name="contact_card_button_text">发送消息</string>

    <string name="contacts_group_activity_title">群/讨论组</string>

    <string name="contacts_add_contacts_verify_message_hint">输入好友验证消息</string>

    <string name="contacts_group_card_text_avatar">头像</string>
    <string name="contacts_group_card_text_name">名称</string>
    <string name="contacts_group_card_text_notice">公告</string>
    <string name="contacts_group_card_text_member_count">当前人数</string>
    <string name="contacts_group_card_text_creator">创建人</string>
    <string name="contacts_group_card_text_create_date">创建时间</string>



</resources>