<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
     />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatEditText
            android:id = "@+id/edtUserCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_edit_padding"
            android:hint="@string/login_name_hint"
            android:text="008618602701898"
            android:singleLine="true"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_edit_padding"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:text="12345678"
            android:singleLine="true"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_button_margin"
            android:text="@string/login_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/common_margin"
            >
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text_forgot_password"
                android:layout_alignParentLeft="true"

                android:clickable="true"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text_register"
                android:layout_alignParentRight="true"
                android:clickable="true"/>

        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>